--- a/kakocha_修正版/HTML/index.HTML
+++ b/kakocha_修正版/HTML/index.HTML
@@ -199,7 +199,7 @@
 
           if (countdown <= 0) {
             clearInterval(interval);
-            window.location.href = "HTML/page1.html"; // ページ1へ移動
+            window.location.href = "file:///C:/Users/xuoxo/Downloads/kakocha_%E4%BF%AE%E6%AD%A3%E7%89%88/HTML/page1.HTML"; // ページ1へ移動
           }
         }, 1000);
       }, 1500); 
