--- a/kakocha_修正版/HTML/page1.HTML
+++ b/kakocha_修正版/HTML/page1.HTML
@@ -38,6 +38,35 @@
     .toolbar button.active {
       background-color: yellow;
     }
+    .toolbar button.highlighted {
+      background-color: orange;
+      position: relative;
+    }
+    .toolbar button.highlighted::after {
+      content: '';
+      position: absolute;
+      top: -10px;
+      left: -10px;
+      width: calc(100% + 20px);
+      height: calc(100% + 20px);
+      border: 2px solid red;
+      border-radius: 50%;
+      animation: pulse 1s infinite;
+    }
+    @keyframes pulse {
+      0% {
+        transform: scale(1);
+        opacity: 1;
+      }
+      50% {
+        transform: scale(1.1);
+        opacity: 0.7;
+      }
+      100% {
+        transform: scale(1);
+        opacity: 1;
+      }
+    }
     .canvas-container {
       flex: 1;
       position: relative;
@@ -60,6 +89,39 @@
       height: auto;
       margin-bottom: 10px;
     }
+    .tutorial-overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.7);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: white;
+      font-size: 18px;
+      flex-direction: column;
+      z-index: 10;
+    }
+    .highlight {
+      position: absolute;
+      background: rgba(255, 255, 255, 0.3);
+      border: 2px solid yellow;
+      border-radius: 5px;
+    }
+    .tutorial-buttons {
+      display: flex;
+      gap: 10px;
+      margin-top: 20px;
+    }
+    .tutorial-button {
+      background: #fff;
+      color: black;
+      padding: 10px 20px;
+      border: none;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
@@ -74,11 +136,23 @@
     <input type="range" id="opacity" min="0" max="1" step="0.1" value="0.5">
     <button id="randomImage">🎲 ランダム画像</button>
     <button id="backToTop">トップページに戻る</button>
+    <button id="tutorialButton">チュートリアルを見る</button>
   </div>
 
   <div class="canvas-container">
     <canvas id="backgroundCanvas" width="600" height="800"></canvas>
     <canvas id="drawingCanvas" width="600" height="800"></canvas>
+  </div>
+
+  <!-- チュートリアルのオーバーレイ -->
+  <div class="tutorial-overlay" id="tutorial">
+    <div id="tutorial-text">チュートリアルへようこそ！</div>
+    <div class="tutorial-buttons">
+      <button class="tutorial-button" onclick="prevStep()">戻る</button>
+      <button class="tutorial-button" onclick="nextStep()">次へ</button>
+      <button class="tutorial-button" onclick="restartTutorial()">最初から</button>
+      <button class="tutorial-button" onclick="skipTutorial()">スキップ</button>
+    </div>
   </div>
 
   <script>
@@ -143,15 +217,15 @@
       };
     }
 
-    // マウスイベントハンドラを更新
-    drawingCanvas.addEventListener('mousedown', (event) => {
+    // マウスおよびペンイベントハンドラを更新
+    function startDrawing(event) {
       isDrawing = true;
       const point = getCanvasPoint(event);
       drawingCtx.beginPath();
       drawingCtx.moveTo(point.x, point.y);
-    });
+    }
 
-    drawingCanvas.addEventListener('mousemove', (event) => {
+    function draw(event) {
       if (!isDrawing) return;
       
       const point = getCanvasPoint(event);
@@ -173,16 +247,23 @@
         );
         drawingCtx.filter = 'none';
       }
-    });
+    }
 
-    drawingCanvas.addEventListener('mouseup', () => {
+    function stopDrawing() {
       isDrawing = false;
       saveState();
-    });
+    }
 
-    drawingCanvas.addEventListener('mouseout', () => {
-      isDrawing = false;
-    });
+    drawingCanvas.addEventListener('mousedown', startDrawing);
+    drawingCanvas.addEventListener('mousemove', draw);
+    drawingCanvas.addEventListener('mouseup', stopDrawing);
+    drawingCanvas.addEventListener('mouseout', stopDrawing);
+
+    // ペンイベントの追加
+    drawingCanvas.addEventListener('pointerdown', startDrawing);
+    drawingCanvas.addEventListener('pointermove', draw);
+    drawingCanvas.addEventListener('pointerup', stopDrawing);
+    drawingCanvas.addEventListener('pointerout', stopDrawing);
 
     function saveState() {
       history.push(drawingCanvas.toDataURL());
@@ -191,34 +272,34 @@
 
     const randomImageButton = document.getElementById('randomImage');
 
-const images = [
-  'images_page1/CGSD.jpg',
-  'images_page1/CGSD2.jpg',
-  'images_page1/SD.jpg',
-  'images_page1/SD2.jpg',
-  'images_page1/SD3.jpg',
-  'images_page1/かこちゃん1.jpg',
-  'images_page1/かこちゃん2.jpg',
-  'images_page1/かこちゃん3.jpg',
-  'images_page1/かこちゃん4.jpg',
-  'images_page1/かわいい男.jpg',
-  'images_page1/かわいい男2.jpg',
-  'images_page1/デフォルメ女の子.jpg',
-  'images_page1/デフォルメ女の子2.jpg',
-  'images_page1/リアル寄りの女の子.jpg',
-  'images_page1/リアル寄りの女の子2.jpg',
-  'images_page1/リアル寄りの女の子3.jpg',
-  'images_page1/夏の女の子.jpg',
-  'images_page1/金魚と女の子.jpg',
-  'images_page1/金髪の女の子.jpg',
-  'images_page1/剣持っててかわいいね copy.jpg',
-  'images_page1/犬と女の子.jpg',
-  'images_page1/銃と女の子.jpg',
-  'images_page1/銃と女の子2.jpg',
-  'images_page1/銃と男 copy.jpg',
-  'images_page1/赤髪の男.jpg',
-  'images_page1/猫と女の子.jpg'
-];
+    const images = [
+      'images_page1/CGSD.jpg',
+      'images_page1/CGSD2.jpg',
+      'images_page1/SD.jpg',
+      'images_page1/SD2.jpg',
+      'images_page1/SD3.jpg',
+      'images_page1/かこちゃん1.jpg',
+      'images_page1/かこちゃん2.jpg',
+      'images_page1/かこちゃん3.jpg',
+      'images_page1/かこちゃん4.jpg',
+      'images_page1/かわいい男.jpg',
+      'images_page1/かわいい男2.jpg',
+      'images_page1/デフォルメ女の子.jpg',
+      'images_page1/デフォルメ女の子2.jpg',
+      'images_page1/リアル寄りの女の子.jpg',
+      'images_page1/リアル寄りの女の子2.jpg',
+      'images_page1/リアル寄りの女の子3.jpg',
+      'images_page1/夏の女の子.jpg',
+      'images_page1/金魚と女の子.jpg',
+      'images_page1/金髪の女の子.jpg',
+      'images_page1/剣持っててかわいいね copy.jpg',
+      'images_page1/犬と女の子.jpg',
+      'images_page1/銃と女の子.jpg',
+      'images_page1/銃と女の子2.jpg',
+      'images_page1/銃と男 copy.jpg',
+      'images_page1/赤髪の男.jpg',
+      'images_page1/猫と女の子.jpg'
+    ];
     
     // プリロード用の関数
     function preloadImages() {
@@ -296,7 +377,7 @@ const images = [
     });
 
     backToTopButton.addEventListener('click', () => {
-      window.location.href = "HTML/index.HTML";
+      window.location.href = "file:///C:/Users/xuoxo/Downloads/kakocha_%E4%BF%AE%E6%AD%A3%E7%89%88/HTML/index.HTML";
     });
 
     // 3分間操作がない場合にトップページに遷移するタイマーを設定
@@ -304,12 +385,12 @@ const images = [
     function resetInactivityTimer() {
       clearTimeout(inactivityTimer);
       inactivityTimer = setTimeout(() => {
-        window.location.href = "HTML/index.HTMLL";
+        window.location.href = "file:///C:/Users/xuoxo/Downloads/kakocha_%E4%BF%AE%E6%AD%A3%E7%89%88/HTML/index.HTML";
       }, 3 * 60 * 1000); // 3分 (3 * 60 * 1000ミリ秒)
     }
 
     // ユーザーの操作を監視してタイマーをリセット
-    ['mousedown', 'mousemove', 'keydown'].forEach(event => {
+    ['mousedown', 'mousemove', 'keydown', 'pointerdown', 'pointermove', 'pointerup'].forEach(event => {
       document.addEventListener(event, resetInactivityTimer);
     });
 
@@ -341,6 +422,95 @@ const images = [
     }
 
     someFunction();
+
+    // チュートリアルのステップを定義
+    const tutorialSteps = [
+      { text: "チュートリアルへようこそ！", highlight: null },
+      { text: "このボタンでペンツールを選択できます", highlight: "#penTool" },
+      { text: "このボタンで消しゴムを選択できます", highlight: "#eraserTool" },
+      { text: "ぼかしツールを選択できます", highlight: "#blurTool" },
+      { text: "ここで色を変更できます", highlight: "#colorPicker" },
+      { text: "ブラシのサイズを調整できます", highlight: "#brushSize" },
+      { text: "キャンバスをクリアするボタンです", highlight: "#clearCanvas" },
+      { text: "ランダムな画像を設定するボタンです", highlight: "#randomImage" },
+      { text: "背景画像の透明度を調整できます", highlight: "#opacity" },
+      { text: "トップページに戻るボタンです", highlight: "#backToTop" },
+      { text: "完了！さっそく描いてみましょう！", highlight: null }
+    ];
+
+    let currentStep = 0;
+
+    function updateTutorial() {
+      const overlay = document.getElementById("tutorial");
+      const tutorialText = document.getElementById("tutorial-text");
+
+      if (currentStep >= tutorialSteps.length) {
+        overlay.style.display = "none";  // チュートリアル終了
+        return;
+      }
+
+      if (currentStep < 0) currentStep = 0;
+
+      const step = tutorialSteps[currentStep];
+      tutorialText.innerText = step.text;
+
+      // 既存のハイライトを削除
+      document.querySelectorAll(".highlight").forEach(el => el.remove());
+
+      // ハイライトを追加
+      if (step.highlight) {
+        const target = document.querySelector(step.highlight);
+        if (target) {
+          const rect = target.getBoundingClientRect();
+          const highlight = document.createElement("div");
+          highlight.classList.add("highlight");
+          highlight.style.width = rect.width + "px";
+          highlight.style.height = rect.height + "px";
+          highlight.style.top = rect.top + window.scrollY + "px";
+          highlight.style.left = rect.left + window.scrollX + "px";
+          document.body.appendChild(highlight);
+
+          // ボタンをオレンジ色に変更
+          document.querySelectorAll('.toolbar button').forEach(btn => btn.classList.remove('highlighted'));
+          target.classList.add('highlighted');
+        }
+      } else {
+        // ハイライトがない場合、すべてのボタンのオレンジ色を解除
+        document.querySelectorAll('.toolbar button').forEach(btn => btn.classList.remove('highlighted'));
+      }
+    }
+
+    function nextStep() {
+      currentStep++;
+      updateTutorial();
+    }
+
+    function prevStep() {
+      currentStep--;
+      updateTutorial();
+    }
+
+    function restartTutorial() {
+      currentStep = 0;
+      document.getElementById("tutorial").style.display = "flex";
+      updateTutorial();
+    }
+
+    function skipTutorial() {
+      document.getElementById("tutorial").style.display = "none";
+    }
+
+    // **ページを開くたびにチュートリアルをリセット**
+    window.onload = () => {
+      currentStep = 0;
+      document.getElementById("tutorial").style.display = "flex";
+      updateTutorial();
+    };
+
+    // チュートリアルを見るボタンのイベントリスナーを追加
+    document.getElementById("tutorialButton").addEventListener('click', () => {
+      restartTutorial();
+    });
   </script>
 </body>
 </html>
